[gd_scene load_steps=2 format=3 uid="uid://601610qyilei"]

[ext_resource type="Script" path="res://Autoload/CheatMenu/cheatmenu.gd" id="1_qt35o"]

[node name="CheatMenu" type="CanvasLayer"]
script = ExtResource("1_qt35o")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = -1
anchor_left = 0.675
anchor_right = 1.0
anchor_bottom = 0.725
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Starting Flags"

[node name="StartDialogue" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Start Dialogue"

[node name="VScrollBar" type="VScrollBar" parent="PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="."]
anchors_preset = -1
anchor_right = 0.36
anchor_bottom = 0.725
grow_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer2"]
layout_mode = 2

[node name="VScrollBar" type="VScrollBar" parent="PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2/HBoxContainer"]
layout_mode = 2

[node name="FlagChangeLog" type="Label" parent="PanelContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Changes to flags:"

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/StartDialogue" to="." method="_on_start_dialogue_pressed"]
